; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/bhnd/extr_bhnd_subr.c_bhnd_sort_devices.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/bhnd/extr_bhnd_subr.c_bhnd_sort_devices.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [24 x i8] c"unknown sort order: %d\0A\00", align 1
@EINVAL = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @bhnd_sort_devices(i32* %0, i64 %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32 (i8*, i8*)*, align 8
  store i32* %0, i32** %5, align 8
  store i64 %1, i64* %6, align 8
  store i32 %2, i32* %7, align 4
  %9 = load i32, i32* %7, align 4
  switch i32 %9, label %12 [
    i32 129, label %10
    i32 128, label %11
  ]

10:                                               ; preds = %3
  store i32 (i8*, i8*)* @compare_ascending_probe_order, i32 (i8*, i8*)** %8, align 8
  br label %16

11:                                               ; preds = %3
  store i32 (i8*, i8*)* @compare_descending_probe_order, i32 (i8*, i8*)** %8, align 8
  br label %16

12:                                               ; preds = %3
  %13 = load i32, i32* %7, align 4
  %14 = call i32 @printf(i8* getelementptr inbounds ([24 x i8], [24 x i8]* @.str, i64 0, i64 0), i32 %13)
  %15 = load i32, i32* @EINVAL, align 4
  store i32 %15, i32* %4, align 4
  br label %21

16:                                               ; preds = %11, %10
  %17 = load i32*, i32** %5, align 8
  %18 = load i64, i64* %6, align 8
  %19 = load i32 (i8*, i8*)*, i32 (i8*, i8*)** %8, align 8
  %20 = call i32 @qsort(i32* %17, i64 %18, i32 4, i32 (i8*, i8*)* %19)
  store i32 0, i32* %4, align 4
  br label %21

21:                                               ; preds = %16, %12
  %22 = load i32, i32* %4, align 4
  ret i32 %22
}

declare dso_local i32 @compare_ascending_probe_order(i8*, i8*) #1

declare dso_local i32 @compare_descending_probe_order(i8*, i8*) #1

declare dso_local i32 @printf(i8*, i32) #1

declare dso_local i32 @qsort(i32*, i64, i32, i32 (i8*, i8*)*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
